--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@dolittle/typescript.build": "5.3.6",
     "@types/marked": "3.0.2",
+    "@types/he": "1.1.2",
     "@zeit/ncc": "0.22.3",
     "del-cli": "3.0.1"
   },
@@ -25,6 +26,7 @@
     "@actions/core": "1.2.4",
     "@dolittle/github-actions.shared.logging": "1.1.1",
     "@dolittle/github-actions.shared.rudiments": "1.1.1",
+    "he": "1.2.0",
     "marked": "3.0.8"
   }
 }
