--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dolittle/github-actions.the-action-name",
+  "name": "@woksin/github-actions.the-action-name",
   "private": true,
   "version": "1.0.0",
   "description": "",
@@ -15,18 +15,17 @@
     "ci": "yarn build:ci && yarn test && yarn test:clean && npx ncc build Distribution/action.js --out release"
   },
   "devDependencies": {
-    "@dolittle/typescript.build": "6.0.2",
-    "@dolittle/typescript.testing": "6.0.2",
-    "@types/he": "1.1.2",
+    "@woksin/typescript.build": "6.0.10",
+    "@woksin/typescript.testing": "6.0.10",
+    "@types/he": "1.2.0",
     "@types/marked": "3.0.3",
-    "@vercel/ncc": "0.36.0",
+    "@vercel/ncc": "0.36.1",
     "del-cli": "5.0.0",
     "ts-sinon": "2.0.2"
   },
   "dependencies": {
     "@actions/core": "1.10.0",
-    "@dolittle/github-actions.shared.logging": "1.1.1",
-    "@dolittle/github-actions.shared.rudiments": "1.1.1",
+    "@woksin/github-actions.shared.logging": "1.1.3",
     "he": "1.2.0",
     "marked": "3.0.8"
   }
